--- a/JKPN.html
+++ b/JKPN.html
@@ -10,7 +10,7 @@
   <body>
     <div class="MenuFlex">
       <div class="item MeLink">
-        <h4><a href="Index.html">About me</a></h4>
+        <h4><a href="index.html">About me</a></h4>
       </div>
       <div class="item Jonkoping">
         <h4>Jönköping</h4>
