responsive website with portfolio and work page

--- a/JKPN.html
+++ b/JKPN.html
@@ -16,7 +16,7 @@
         <h4>Jönköping</h4>
       </div>
       <div class="item Works">
-        <h4>My works</h4>
+        <h4><a href="portfolio.html">Works</a></h4>
       </div>
     </div>
 
