--- a/index.html
+++ b/index.html
@@ -19,55 +19,60 @@
         <h4><a href="portfolio.html">Works</a></h4>
       </div>
     </div>
+    <div class="gridContainer">
+      <div class="heroSection">
+        <h5>Welcome</h5>
+      </div>
 
-    <h1>Hello! Welcome to my first website.</h1>
+      <h1>Hello! Welcome to my first website.</h1>
 
-    <div class="row">
-      <div class="MeNMD">
-        <div class="aboutMe">
-          <h2>About me</h2>
+      <div class="row">
+        <div class="MeNMD">
+          <div class="aboutMe">
+            <h2>About me</h2>
 
-          <p>
-            My name is Kateřina Milatová, but everyone usually calls me Kate. I
-            am 19 years old and I come from the Czech Republic. I am very
-            grateful for the opportunity to study here in Sweden!
-          </p>
+            <p>
+              My name is Kateřina Milatová, but everyone usually calls me Kate.
+              I am 19 years old and I come from the Czech Republic. I am very
+              grateful for the opportunity to study here in Sweden!
+            </p>
+          </div>
+
+          <div class="whyNMD">
+            <h2>Why NMD</h2>
+            <p>
+              I study New Media Design because I like that it combines graphics
+              with technology. One should have both aesthetic sense and logical
+              thinking.
+            </p>
+          </div>
         </div>
-
-        <div class="whyNMD">
-          <h2>Why NMD</h2>
-          <p>
-            I study New Media Design because I like that it combines graphics
-            with technology. One should have both aesthetic sense and logical
-            thinking.
-          </p>
+        <div class="MeNMD">
+          <img src="images/pic1.jpg" id="Mypic" />
         </div>
       </div>
-      <div class="MeNMD">
-        <img src="images/pic1.jpg" id="Mypic" />
-      </div>
-    </div>
 
-    <div class="myFreeTime">
-      <h2 id="other">My free time</h2>
-      <h3>Drawing</h3>
+      <div class="myFreeTime">
+        <h2 id="other">My free time</h2>
+        <h3>Drawing</h3>
+        <p>
+          What I enjoy very much is drawing and painting. Most of all I like to
+          visit new places with my sketchbook, sit down and capture what I see
+          around me. You can find a few pictures below.
+        </p>
+      </div>
+
+      <div class="DrawPics">
+        <img src="images/regensburg.jpeg" style="width: 530px" />
+        <img src="images/lamp.jpeg" style="width: 258px" />
+        <img src="images/roznov.jpeg" style="width: 500px" />
+      </div>
+
       <p>
-        What I enjoy very much is drawing and painting. Most of all I like to
-        visit new places with my sketchbook, sit down and capture what I see
-        around me. You can find a few pictures below.
+        Other activities I like is traveling, meeting new people and doing
+        sports. Hiking in the mountains and playing tennis and badminton are
+        especially fun!
       </p>
     </div>
-
-    <div class="DrawPics">
-      <img src="images/regensburg.jpeg" style="width: 530px" />
-      <img src="images/lamp.jpeg" style="width: 258px" />
-      <img src="images/roznov.jpeg" style="width: 500px" />
-    </div>
-
-    <p>
-      Other activities I like is traveling, meeting new people and doing sports.
-      Hiking in the mountains and playing tennis and badminton are especially
-      fun!
-    </p>
   </body>
 </html>
